# apis-highlighter-ng

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: add-to-project.yml  black.yml  djlint.yml  linters.yml  publish.yml  release-please.yml  ruff.yml
apis_highlighter/: admin.py  apps.py  helpers.py  models.py  signals.py  urls.py  views.py
apis_highlighter/migrations/: 0001_initial.py  0002_rename_annotation_project_annotation_project_and_more.py  0003_annotation_text_field_name.py
apis_highlighter/static/css/: highlighter.css
apis_highlighter/static/js/: highlighter.js
apis_highlighter/templates/apis_highlighter/: annotation_confirm_delete.html  apis_highlighter.html  select_project.html
apis_highlighter/templatetags/: apis_highlighter.py
